fix steamID auth error, fix game-display bug causing white space in grid

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,4 +26,5 @@
 
 .banners img {
 	width: 100%;
+	height: 100%;
 }
